kubernetes/apps/kube-system/goldilocks/app/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: goldilocks
  namespace: kube-system
spec:
  hostnames:
    - goldilocks.tosih.org
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: goldilocks-dashboard
          port: 80
